[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Fonts/joystix monospace.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Modules/Games/Questionnaire/Game Questionnaire/GameQuestionnaire.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[node name="GameQuestion" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="TimerLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -27.0
margin_top = 16.0
margin_right = 27.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
text = "10"
align = 1
valign = 1

[node name="BerryCollected" type="Label" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 54.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
text = "Collected: 0"
valign = 1

[node name="BerryGet" type="Label" parent="."]
margin_left = 16.0
margin_top = 72.0
margin_right = 259.0
margin_bottom = 111.0
custom_fonts/font = SubResource( 1 )
text = "Berry: 0"
valign = 1

[node name="QuestionsLeft" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -370.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
text = "Questions: 5"
valign = 1
clip_text = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -147.5
margin_bottom = 147.5
custom_constants/separation = 64
alignment = 1

[node name="Question" type="Label" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
text = "Question?"
align = 1
valign = 1
clip_text = true

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 103.0
margin_right = 1024.0
margin_bottom = 295.0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/VBoxContainer2"]
margin_right = 1024.0
margin_bottom = 192.0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/VBoxContainer2/CenterContainer"]
margin_left = 80.0
margin_right = 944.0
margin_bottom = 192.0
custom_constants/vseparation = 64
custom_constants/hseparation = 64
columns = 2

[node name="Answer" type="Button" parent="VBoxContainer/VBoxContainer2/CenterContainer/GridContainer"]
margin_right = 400.0
margin_bottom = 64.0
rect_min_size = Vector2( 400, 64 )
custom_fonts/font = SubResource( 2 )
toggle_mode = true
text = "Answer 1"
clip_text = true

[node name="Answer2" type="Button" parent="VBoxContainer/VBoxContainer2/CenterContainer/GridContainer"]
margin_left = 464.0
margin_right = 864.0
margin_bottom = 64.0
rect_min_size = Vector2( 400, 64 )
custom_fonts/font = SubResource( 2 )
toggle_mode = true
text = "Answer 2"
clip_text = true

[node name="Answer3" type="Button" parent="VBoxContainer/VBoxContainer2/CenterContainer/GridContainer"]
margin_top = 128.0
margin_right = 400.0
margin_bottom = 192.0
rect_min_size = Vector2( 400, 64 )
custom_fonts/font = SubResource( 2 )
toggle_mode = true
text = "Answer 3"
clip_text = true

[node name="Answer4" type="Button" parent="VBoxContainer/VBoxContainer2/CenterContainer/GridContainer"]
margin_left = 464.0
margin_top = 128.0
margin_right = 864.0
margin_bottom = 192.0
rect_min_size = Vector2( 400, 64 )
custom_fonts/font = SubResource( 2 )
toggle_mode = true
text = "Answer 4"
clip_text = true

[node name="QuestionTimer" type="Timer" parent="."]
process_mode = 0
autostart = true

[node name="SecondTimer" type="Timer" parent="."]
process_mode = 0
autostart = true

[connection signal="pressed" from="VBoxContainer/VBoxContainer2/CenterContainer/GridContainer/Answer" to="." method="_on_Answer_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer2/CenterContainer/GridContainer/Answer2" to="." method="_on_Answer2_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer2/CenterContainer/GridContainer/Answer3" to="." method="_on_Answer3_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer2/CenterContainer/GridContainer/Answer4" to="." method="_on_Answer4_pressed"]
[connection signal="timeout" from="QuestionTimer" to="." method="_on_QuestionTimer_timeout"]
[connection signal="timeout" from="SecondTimer" to="." method="_on_SecondTimer_timeout"]
